welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: not found: value a
		if ( a==b) {
                     ^withoutDoubles:5: error: not found: value a
			rep = a + ((b+1) % 6)
                              ^withoutDoubles:8: error: not found: value b
		rep = b + a
                      ^