welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
	var rep = 0
	if (noDoubles) {
		if ( a==b) {
			rep = a + ((b+1) % 6)
		}
	} else {
		rep = b + a
	}
	return rep
}
